--- a/www/index.html
+++ b/www/index.html
@@ -315,7 +315,7 @@
 
                     <div class="col-xs-4">
                         <div class="box">
-                            <a style="color: white"
+                            <a onclick="change_page('#messagepage','pop')" style="color: white"
                                class="ui-btn ui-mini nd2-btn-icon-block">Message</a>
                         </div>
                     </div>
