--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
     <script type="text/javascript" src="cordova.js"></script>
     <!--<script type="text/javascript" src="./js/index.js"></script>-->
     <script type="text/javascript" src="./js/chartist.min.js"></script>
+    <script type="text/javascript" src="./js/underscore.js"></script>
 
 </head>
 
@@ -279,7 +280,7 @@
                     </div>
 
                     <div>
-                        <input type="checkbox" id="gg"  onchange="add_number('4000','gg')">
+                        <input type="checkbox" id="gg" onchange="add_number('4000','gg')">
                         <label for="gg">Trump</label>
                     </div>
 
